force-app/main/default/objects/Contact_Relationship__c/Contact_Relationship__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Contacts and Accounts to each other</description>
    <label>Contact Relationship</label>
    <nameField>
        <label>Contact Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>