force-app/main/default/objects/Contact_Relationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Relationships</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>