force-app/main/default/objects/Contact_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Enter the relationship label that connects this related contact to the contact. This information is required.</description>
    <label>Relationship</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>